--- a/apollo/frontend/templates/frontend/pagination.html
+++ b/apollo/frontend/templates/frontend/pagination.html
@@ -1,4 +1,5 @@
 {% macro render_pager(pager, endpoint) %}
+<div class="text-center">
 <ul class="pagination pagination-centered">
 <li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First page{% endtrans %}" href="{{ url_for(endpoint, page=1) }}">&laquo;</a></li>
 <li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous page{% endtrans %}" href="{{ url_for(endpoint, page=pager.prev_num) }}">&larr;</a></li>
@@ -8,4 +9,10 @@
 <li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next page{% endtrans %}" href="{{ url_for(endpoint, page=pager.next_num) }}">&rarr;</a></li>
 <li {% if pager.page == pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last page{% endtrans %}" href="{{ url_for(endpoint, page=pager.pages) }}">&raquo;</a></li>
 </ul>
+</div>
+<div class="text-center">
+<ul class="pagination pagination-centered" style="margin-top:0px;">{%- set start = (pager.page - 1) * pager.per_page + 1 -%}{%- set end = pager.page * pager.per_page -%}{% set total = pager.total %}
+<li class="disabled"><a>{% trans %}Showing <strong>{{ start }}-{{ end }}</strong> of <strong>{{ total }}</strong>{% endtrans %}</a></li>
+</ul>
+</div>
 {% endmacro %}
