updated error pages

--- a/apollo/frontend/templates/500.html
+++ b/apollo/frontend/templates/500.html
@@ -9,11 +9,13 @@
     {% endassets %}
   </head>
  <body>
-    <div class="row-fluid">
-		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Zong! We screwed up :({% endtrans %}</legend>
-			<p>{% trans %}You shouldn't be seeing this page but you are because you're a genius and have found a rare bug in the software. Rest assured, we now know about it and will fix it ASAP!{% endtrans %}</p>
-		</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
+                <legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Zong! We screwed up :({% endtrans %}</legend>
+                <p>{% trans %}You shouldn't be seeing this page but you are because you're a genius and have found a rare bug in the software. Rest assured, we now know about it and will fix it ASAP!{% endtrans %}</p>
+            </div>
+        </div>
 	</div>
   </body>
 <html>
