--- a/apollo/frontend/templates/403.html
+++ b/apollo/frontend/templates/403.html
@@ -9,11 +9,13 @@
     {% endassets %}
   </head>
  <body>
-    <div class="row-fluid">
-		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Off Limits!{% endtrans %}</legend>
-			<p>{% trans %}We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!{% endtrans %}</p>
-		</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
+                <legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Off Limits!{% endtrans %}</legend>
+                <p>{% trans %}We understood your request, but we refuse to honor it! You are seeing this page because you were snooping around! Now paddle along before the buzzer goes off!{% endtrans %}</p>
+            </div>
+        </div>
 	</div>
   </body>
 <html>
