--- a/apollo/frontend/templates/404.html
+++ b/apollo/frontend/templates/404.html
@@ -9,11 +9,13 @@
     {% endassets %}
   </head>
  <body>
-    <div class="row-fluid">
-		<div class="span4 offset4" style="text-align:center; margin-top:14em;">
-			<legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Oh No! Looks like you're lost!{% endtrans %}</legend>
-			<p>{% trans %}Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you either verify the address or click the back arrow (&larr;) at the top left corner of the page, and cross-check the action you were trying to perform!{% endtrans %}</p>
-		</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4" style="text-align:center; margin-top:14em;">
+                <legend style="border-bottom:0px; margin-bottom:0px;">{% trans %}Oh No! Looks like you're lost!{% endtrans %}</legend>
+                <p>{% trans %}Don't freak out, maybe you entered the wrong address or clicked a bad link! Who knows, this could even be a fluke! :) I recommend you either verify the address or click the back arrow (&larr;) at the top left corner of the page, and cross-check the action you were trying to perform!{% endtrans %}</p>
+            </div>
+        </div>
 	</div>
   </body>
 <html>
