--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -33,18 +33,16 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{% url dashboard %}"><i class="glyphicon glyphicon-user glyphicon-home"></i> {% trans %}Dashboard{% endtrans %}</a></li>
-            {% forms_menu request perms %}
-            {% if perms.core.can_analyse %}{% analysis_menu request %}{% endif %}
-            {% if perms.core.view_observers %}<li><a href="{% url contacts_list %}"><i class="glyphicon glyphicon-user"></i> {% trans %}Observers{% endtrans %}</a></li>{% endif %}
-            {% if perms.messagelog.view_messages %}<li><a href="{% url messages_list %}"><i class="glyphicon glyphicon-envelope"></i> {% trans %}Messages{% endtrans %}</a></li>{% endif %}
+            <li><a href="{{ current_menu.submenu('dashboard').url }}"><i class="glyphicon glyphicon-user glyphicon-home"></i> {{ current_menu.submenu('dashboard').text }}</a></li>
+            <li><a href=""><i class="glyphicon glyphicon-user"></i> {% trans %}Observers{% endtrans %}</a></li>
+            <li><a href=""><i class="glyphicon glyphicon-envelope"></i> {% trans %}Messages{% endtrans %}</a></li>
             <li class="divider-vertical"></li>
             <li>
-              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> {{ request.user.username }} <b class="caret"></b></a>
+              <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> {{ current_user.email }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url activity_selection %}"><i class="glyphicon glyphicon-th-list"></i> {% trans %}Activity Menu{% endtrans %}</a></li>
+                <li><a href="{{ current_menu.submenu('events').url }}"><i class="glyphicon glyphicon-th-list"></i> {{ current_menu.submenu('events').text }}</a></li>
                 <li class="divider"></li>
-                <li><a href="{% url user-logout %}"><i class="glyphicon glyphicon-log-out"></i> {% trans %}Logout{% endtrans %}</a></li>
+                <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {% trans %}Logout{% endtrans %}</a></li>
               </ul>
             </li>
           </ul>
@@ -52,7 +50,7 @@
       </div>
     </div>
     <div class="container">
-      <h3 class="lead h3">{% block title %}{{ page_title }}{% endblock %}{% activity_name request %}</h3>
+      <h3 class="lead h3">{% block title %}{{ page_title }}{% endblock %} · {{ g.event.name }}</h3>
     </div>
     <div class="container">
       {% block content %}{% endblock %}
