helper function for generating form list for menu generation

--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -34,7 +34,29 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="{{ current_menu.submenu('dashboard').url }}"><i class="glyphicon glyphicon-user glyphicon-home"></i> {{ current_menu.submenu('dashboard').text }}</a></li>
-            <li><a href=""><i class="glyphicon glyphicon-user"></i> {% trans %}Observers{% endtrans %}</a></li>
+            {% if current_menu.submenu('forms.checklists').dynamic_list|count > 1 -%}
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-check"></i> {% trans %}Checklists{% endtrans %} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    {% for form in current_menu.submenu('forms.checklists').dynamic_list -%}
+                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-check"></i> {{ form.text }}</a></li>
+                    {%- endfor %}
+                </ul>
+            </li>
+            {%- elif current_menu.submenu('forms.checklists').dynamic_list -%}
+            <li><a href="{{ current_menu.submenu('forms.checklists').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.checklists').dynamic_list[0].text }}</a></li>
+            {%- endif -%}
+            {% if current_menu.submenu('forms.incidents').dynamic_list|count > 1 -%}
+            <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-check"></i> {% trans %}Incidents{% endtrans %} <b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                    {% for form in current_menu.submenu('forms.incidents').dynamic_list -%}
+                    <li><a href="{{ form.url }}"><i class="glyphicon glyphicon-check"></i> {{ form.text }}</a></li>
+                    {%- endfor %}
+                </ul>
+            </li>
+            {%- elif current_menu.submenu('forms.incidents').dynamic_list -%}
+            <li><a href="{{ current_menu.submenu('forms.incidents').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.incidents').dynamic_list[0].text }}</a></li>
+            {%- endif -%}
+            <li><a href="{{ current_menu.submenu('participants').url }}"><i class="glyphicon glyphicon-user"></i> {{ current_menu.submenu('participants').text }}</a></li>
             <li><a href=""><i class="glyphicon glyphicon-envelope"></i> {% trans %}Messages{% endtrans %}</a></li>
             <li class="divider-vertical"></li>
             <li>
