Updated filter documentation

--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -1,7 +1,7 @@
 {% extends 'frontend/_layout.html' %}{% block content %}
     <div class="row-fluid">
       <div class="col-md-10 col-offset-1">
-      	<table>
+      	<table class="table table-bordered table-striped">
          <thead>
            <tr>
              <th>Participant ID</th>
