--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -56,14 +56,20 @@
             {%- elif current_menu.submenu('forms.incidents').dynamic_list -%}
             <li><a href="{{ current_menu.submenu('forms.incidents').dynamic_list[0].url }}"><i class="glyphicon glyphicon-check"></i> {{ current_menu.submenu('forms.incidents').dynamic_list[0].text }}</a></li>
             {%- endif -%}
+            {%- if current_menu.submenu('participants').visible -%}
             <li><a href="{{ current_menu.submenu('participants').url }}"><i class="glyphicon glyphicon-user"></i> {{ current_menu.submenu('participants').text }}</a></li>
-            <li><a href=""><i class="glyphicon glyphicon-envelope"></i> {% trans %}Messages{% endtrans %}</a></li>
+            {%- endif -%}
+            {%- if current_menu.submenu('messages').visible -%}
+            <li><a href="{{ current_menu.submenu('messages').url }}"><i class="glyphicon glyphicon-envelope"></i> {{ current_menu.submenu('messages').text }}</a></li>
+            {%- endif -%}
             <li class="divider-vertical"></li>
             <li>
               <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i> {{ current_user.email }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
+              {%- if current_menu.submenu('events').visible -%}
                 <li><a href="{{ current_menu.submenu('events').url }}"><i class="glyphicon glyphicon-th-list"></i> {{ current_menu.submenu('events').text }}</a></li>
                 <li class="divider"></li>
+              {%- endif -%}
                 <li><a href="{{ url_for_security('logout') }}"><i class="glyphicon glyphicon-log-out"></i> {% trans %}Logout{% endtrans %}</a></li>
               </ul>
             </li>
