--- a/apollo/frontend/templates/frontend/macros/pagination.html
+++ b/apollo/frontend/templates/frontend/macros/pagination.html
@@ -1,13 +1,13 @@
-{% macro render_pager(pager, endpoint) %}
+{% macro render_pager(pager, endpoint, args) %}
 <div class="text-center">
 <ul class="pagination pagination-centered">
-<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First page{% endtrans %}" href="{{ url_for(endpoint, page=1) }}">&laquo;</a></li>
-<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous page{% endtrans %}" href="{{ url_for(endpoint, page=pager.prev_num) }}">&larr;</a></li>
+<li {% if pager.page == 1 %}class="disabled"{% endif %}><a title="{% trans %}First page{% endtrans %}" href="{{ url_for(endpoint, page=1, **args) }}">&laquo;</a></li>
+<li {% if not pager.has_prev %}class="disabled"{% endif %}><a title="{% trans %}Previous page{% endtrans %}" href="{{ url_for(endpoint, page=pager.prev_num, **args) }}">&larr;</a></li>
 {% for pg in pager.page|pagelist(pager.pages) %}
-<li {% if pg == pager.page %}class="active"{% endif %}><a href="{{ url_for(endpoint, page=pg) }}">{{ pg }}</a></li>
+<li {% if pg == pager.page %}class="active"{% endif %}><a href="{{ url_for(endpoint, page=pg, **args) }}">{{ pg }}</a></li>
 {% endfor %}
-<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next page{% endtrans %}" href="{{ url_for(endpoint, page=pager.next_num) }}">&rarr;</a></li>
-<li {% if pager.page == pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last page{% endtrans %}" href="{{ url_for(endpoint, page=pager.pages) }}">&raquo;</a></li>
+<li {% if not pager.has_next %}class="disabled"{% endif %}><a title="{% trans %}Next page{% endtrans %}" href="{{ url_for(endpoint, page=pager.next_num, **args) }}">&rarr;</a></li>
+<li {% if pager.page == pager.pages %}class="disabled"{% endif %}><a title="{% trans %}Last page{% endtrans %}" href="{{ url_for(endpoint, page=pager.pages, **args) }}">&raquo;</a></li>
 </ul>
 </div>
 {%- set start = (pager.page - 1) * pager.per_page + 1 -%}
