Grand dump of worked-on templates. Paginator is still broken, though

--- a/apollo/frontend/templates/frontend/macros/participant_edit_form.html
+++ b/apollo/frontend/templates/frontend/macros/participant_edit_form.html
@@ -1,5 +1,5 @@
 {% macro render_edit_form(form) %}
-<form class="form" method="POST">
+<form class="form-horizontal" method="POST">
 {{ form.hidden_tag() }}
 <fieldset>
 <legend>{% trans %}Edit participant{% endtrans %}</legend>
