--- a/apollo/frontend/templates/frontend/macros/participant_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/participant_list_filter.html
@@ -19,6 +19,6 @@
 {{ form.partner(class_='form-control span3') }}
 </div>
 <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-<a class="btn btn-default">Clear</a>
+<a class="btn btn-default" id="filter_reset">Clear</a>
 </form>
 {% endmacro %}
