--- a/apollo/frontend/templates/frontend/macros/submission_list_filter.html
+++ b/apollo/frontend/templates/frontend/macros/submission_list_filter.html
@@ -22,6 +22,6 @@
 </div>
 {%- endif -%}
 <button class="btn btn-warning" type="submit"><i class="glyphicon glyphicon-search"></i> Filter</button>
-<a class="btn btn-default">Clear</a>
+<a class="btn btn-default" id="filter_reset">Clear</a>
 </form>
 {% endmacro %}
