--- a/apollo/frontend/templates/frontend/nu_submission_list.html
+++ b/apollo/frontend/templates/frontend/nu_submission_list.html
@@ -68,3 +68,6 @@
 </div>
 </div>
 {%- endblock -%}
+{%- block scripts -%}
+<script src="{{ url_for('static', filename='js/filters.js') }}"></script>
+{%- endblock -%}
