--- a/apollo/frontend/templates/frontend/nu_dashboard.html
+++ b/apollo/frontend/templates/frontend/nu_dashboard.html
@@ -12,7 +12,15 @@
 {% for row in data %}
 <div class="col-md-6 text-center">
 <div class="piecontainer">
+{%- if should_expand -%}
+{%- if group -%}
+<h3><a href="{{ url_for('dashboard.index', group=group, locationtype=locationtype, **args) }}">{{ row.name }}</a></h3>
+{%- else -%}
+<h3><a href="{{ url_for('dashboard.index', group=row.name, locationtype=locationtype, **args) }}">{{ row.name }}</a></h3>
+{%- endif -%}
+{%- else -%}
 <h3>{{ row.name }}</h3>
+{%- endif -%}
 <svg class="piechart" data-chart='{{ row|tojson|safe }}'></svg>
 </div>
 </div>
