Dashboard analyses now returns only empty list for no data. Dashboard shows message for no data

--- a/apollo/frontend/templates/frontend/nu_dashboard.html
+++ b/apollo/frontend/templates/frontend/nu_dashboard.html
@@ -25,6 +25,8 @@
 </div>
 </div>
 {% endfor %}
+{% else %}
+<div class="jumbotron text-center"><h3>{% trans %}No data available{% endtrans %}</h3></div>
 {% endif %}
 </div>
 {% endblock %}
