--- a/apollo/frontend/templates/frontend/nu_dashboard.html
+++ b/apollo/frontend/templates/frontend/nu_dashboard.html
@@ -26,7 +26,7 @@
 </div>
 {% endfor %}
 {% else %}
-<div class="jumbotron text-center"><h3>{% trans %}No data available{% endtrans %}</h3></div>
+<div class="alert alert-warning text-center"><p>{% trans %}No data available{% endtrans %}</p></div>
 {% endif %}
 </div>
 {% endblock %}
