--- a/apollo/frontend/templates/frontend/_layout.html
+++ b/apollo/frontend/templates/frontend/_layout.html
@@ -89,7 +89,7 @@
     {% assets 'apollo_js' %}
     <script type="text/javascript" src="{{ ASSET_URL }}" charset="utf-8"></script>
     {% endassets %}
-    {%- block scripts -%}{%- endblock -%}
+    {%- block javascripts -%}{%- endblock -%}
     {% if not debug %}
     <script type="text/javascript">
 
