--- a/apollo/frontend/templates/frontend/submission_list.html
+++ b/apollo/frontend/templates/frontend/submission_list.html
@@ -1,67 +1,69 @@
-{% extends "core/layout.html" %}{% load apollo %}{% load bootstrap_pagination %}{% load i18n %}
+{% extends "frontend/_layout.html" %}
+{%- from 'frontend/macros/submission_list_filter.html' import render_filter_form -%}
+{%- from 'frontend/macros/pagination.html' import render_pager -%}
+{%- from 'frontend/macros/submission_list_macros.html' import submission_header, submission_items -%}
 {% block javascripts %}
-{% if perms.core.message_observers %}
-{% send_message paginator.count %}
+{% if perms.send_messages.can() %}
+{# TODO: send_message paginator.count #}
 {% endif %}
 {% endblock %}
-{% block title %}
-{{ page_title }}
+{% block toolbar %}
 {% if form.type == 'INCIDENT' %}
-{% if perms.core.add_submission %}
+{% if perms.add_submission.can() %}
 <div class="btn-group pull-right">
-  <a style="margin-left:1em" class="btn btn-primary" href="{% url submission_add form.pk %}">{% trans "Add Incident" %}</a>
+  <a style="margin-left:1em" class="btn btn-primary" href="{{ url_for('submissions.submission_create', form.pk) }}">{% trans %}Add Incident{% endtrans %}</a>
 </div>
 {% endif %}
-{% if perms.core.export_submissions %}
+{% if perms.export_submissions.can() %}
 
-<form action="{{ request.get_full_path }}" method="get" id="export_observer_submissions" style="display:none">
-{% for key, value in request.GET.items %}
+<form action="{{ request.url }}" method="get" id="export_observer_submissions" style="display:none">
+{% for key, value in request.args.items() %}
 {% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
 {% endfor %}
 <input type="hidden" name="export" value="observers" />
 </form>
 
 <div class="btn-group pull-right">
-  <a class="btn btn-default" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Export" context "verb" %}</a>
+  <a class="btn btn-default" href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans %}Export{% endtrans %}</a>
 </div>
 {% endif %}
 {% else %}
-{% if perms.core.export_submissions %}
+{% if perms.export_submissions.can() %}
 
-<form action="{{ request.get_full_path }}" method="get" id="export_observer_submissions" style="display:none">
-{% for key, value in request.GET.items %}
+<form action="{{ request.url }}" method="get" id="export_observer_submissions" style="display:none">
+{% for key, value in request.args.items() %}
 {% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
 {% endfor %}
 <input type="hidden" name="export" value="observers" />
 </form>
 
-<form action="{{ request.get_full_path }}" method="get" id="export_master_submissions" style="display:none">
-{% for key, value in request.GET.items %}
+<form action="{{ request.url }}" method="get" id="export_master_submissions" style="display:none">
+{% for key, value in request.args.items() %}
 {% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
 {% endfor %}
 <input type="hidden" name="export" value="master" />
 </form>
 
 <div class="btn-group pull-right">
-  <a class="btn btn-default" href="javascript:document.getElementById('export_master_submissions').submit()">{% trans "Export" context "verb" %}</a>
+  <a class="btn btn-default" href="javascript:document.getElementById('export_master_submissions').submit()">{% trans %}Export{% endtrans %}</a>
   <button class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
   <ul class="dropdown-menu">
-    <li><a href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans "Observers Data" %}</a></li>
-    <li><a href="javascript:document.getElementById('export_master_submissions').submit()">{% trans "Master Data" %}</a></li>
+    <li><a href="javascript:document.getElementById('export_observer_submissions').submit()">{% trans %}Observers Data{% endtrans %}</a></li>
+    <li><a href="javascript:document.getElementById('export_master_submissions').submit()">{% trans %}Master Data{% endtrans %}</a></li>
   </ul>
 </div>
 {% endif %}
 {% endif %}
-{% if perms.core.message_observers %}
+{% if perms.send_messages.can() %}
 <div class="btn-group pull-right">
-  <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">{% trans "Send Message" %}</a>
+  <a style="margin-right:1em" id="send_message_modal_btn" href="#send_message" role="button" class="btn btn-success">{% trans %}Send Message{% endtrans %}</a>
 </div>
 {% endif %}
 {% endblock %}
 {% block content %}
 <div class="row">
   <div class="col-md-12">
-    {% submission_filter form filter_form %}
+    {{ render_filter_form(form, filter_form) }}
   </div>
 </div>
 
@@ -70,22 +72,20 @@
     <div class="table-responsive responsive">
       <table class="table table-striped table-bordered table-hover">
           <thead >
-            {% submission_header form perms %}
+            {{ submission_header(form, form_fields, location_types, perms) }}
           </thead>
           <tbody>
-            {% submission_items submissions form perms %}
+            {{ submission_items(pager.items, form, form_fields, location_types, perms) }}
           </tbody>
         </table>
       </div>
   </div>
 </div>
 
-{% if is_paginated %}
 <div class="row">
   <div class="col-md-12">
-  {% bootstrap_paginate page_obj range=10 show_first_last="true" %}
+  {{ render_pager(pager, 'submissions.submission_list', args) }}
   </div>
 </div>
-{% endif %}
 
 {% endblock %}
