renamed 'scripts' block to 'javascripts'

--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -46,6 +46,6 @@
       </div>
     </div>
 {%- endblock -%}
-{%- block scripts -%}
+{%- block javascripts -%}
 <script src="{{ url_for('static', filename='js/filters.js') }}"></script>
 {%- endblock -%}
