--- a/apollo/frontend/templates/frontend/participant_list.html
+++ b/apollo/frontend/templates/frontend/participant_list.html
@@ -1,6 +1,16 @@
 {%- extends 'frontend/_layout.html' -%}{%- from 'frontend/macros/participant_list_filter.html' import render_filter_form -%}
 {% block toolbar %}
-  <a class="btn btn-info pull-right" href="{{ url_for('participants.participant_list_import') }}"><i class="glyphicon glyphicon-upload glyphicon-white"></i> Import Participants</a>
+  {% if perms.export_participants.can() %}
+  <form action="{{ request.url }}" method="get" id="export_observers" style="display:none">
+  {% for key, value in request.args.items %}
+  {% if key != "export" %}<input type="hidden" name="{{ key }}" value="{{ value }}" />{% endif %}
+  {% endfor %}
+  <input type="hidden" name="export" value="true" />
+  </form>
+  <a href="javascript:document.getElementById('export_observers').submit()" class="btn btn-default pull-right" type="submit">{% trans %}Export{% endtrans %}</a>
+  {% endif %}
+
+  <a class="btn btn-info pull-right" href="{{ url_for('participants.participant_list_import') }}"><i class="glyphicon glyphicon-upload glyphicon-white"></i> {% trans %}Import Participants{% endtrans %}</a>
 {% endblock %}
 {% block content %}
 {%- set flash_msgs = get_flashed_messages(category_filter=['task_begun']) -%}
@@ -21,24 +31,36 @@
       	<table class="table table-bordered table-striped">
          <thead>
            <tr>
-             <th>Participant ID</th>
-             <th>Name</th>
-             <th>Role</th>
-             <th>Location</th>
-             <th>Organization</th>
-             <th>Edit</th>
+             <th>{% trans %}Participant ID{% endtrans %}</th>
+             {%- for location_type in location_types -%}
+             <th>{% trans %}{{ location_type.name }}{% endtrans %}</th>
+             {%- endfor -%}
+             <th>{% trans %}Name{% endtrans %}</th>
+             <th>{% trans %}Role{% endtrans %}</th>
+             <th>{% trans %}Location{% endtrans %}</th>
+             <th>{% trans %}Organization{% endtrans %}</th>
+             {%- if perms.edit_participant.can() -%}
+             <th>{% trans %}Edit{% endtrans %}</th>
+             {%- endif -%}
            </tr>
          </thead>
          <tbody>
            {% for participant in participants.items %}
            <tr>
              <td>{{ participant.participant_id }}</td>
+             {%- for location_type in location_types -%}
+             <th>{% trans %}{{ participant.location.ancestor(location_type.name).name }}{% endtrans %}</th>
+             {%- endfor -%}
              <td>{{ participant.name }}</td>
              <td>{{ participant.role }}</td>
              <td>{{ participant.location }}</td>
              <td>{{ participant.partner }}</td>
+             {%- if perms.edit_participant.can() -%}
              <td><a href="{{ url_for('participants.participant_edit', pk=participant.id) }}">Edit</a></td>
+             {%- endif -%}
            </tr>
+           {% else %}
+           <!-- no data -->
            {% endfor %}
          </tbody>
         </table>
@@ -48,4 +70,7 @@
 {%- endblock -%}
 {%- block javascripts -%}
 <script src="{{ url_for('static', filename='js/filters.js') }}"></script>
+{% if perms.send_messages.can() %}
+{# TODO: send_message paginator.count #}
+{% endif %}
 {%- endblock -%}
